--- a/PatientInfoModule/Views/Info/InsuranceDocumentView.xaml
+++ b/PatientInfoModule/Views/Info/InsuranceDocumentView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PatientInfoModule.Views.IdentityDocumentView"
+﻿<UserControl x:Class="PatientInfoModule.Views.InsuranceDocumentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,10 +7,11 @@
              xmlns:misc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
              xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
              xmlns:editors="http://wpfcontrols.com/"
+             xmlns:data="clr-namespace:Core.Data;assembly=Core.Data"
              mc:Ignorable="d" 
              d:DesignHeight="300"
              d:DesignWidth="450" 
-             d:DataContext="{d:DesignInstance viewModels:IdentityDocumentViewModel}">
+             d:DataContext="{d:DesignInstance viewModels:InsuranceDocumentViewModel}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -85,18 +86,33 @@
                  Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" />
         <TextBlock Grid.Row="3"
                    Grid.Column="0"
-                   Text="Кем выдан" />
+                   Text="Страховая компания" />
         <editors:AutoCompleteTextBox Grid.Row="3"
                                      Grid.Column="1"
                                      Grid.ColumnSpan="3"
                                      Margin="3"
                                      Background="White"
                                      MinHeight="40"
-                                     Provider="{Binding GivenOrgSuggestionProvider}"
-                                     SelectedItem="{Binding GivenOrg, Mode=TwoWay, ValidatesOnDataErrors=True}"
-                                     Text="{Binding GivenOrgText, Mode=TwoWay, ValidatesOnDataErrors=True}"
-                                     Watermark="Введите любое слово из названия выдавшей организации"
+                                     DisplayMember="NameSMOK"
+                                     Provider="{Binding InsuranceCompanySuggestionProvider}"
+                                     SelectedItem="{Binding InsuranceCompany, Mode=TwoWay, ValidatesOnDataErrors=True}"
+                                     Watermark="Введите любое слово из названия страховой компании"
                                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}">
+            <editors:AutoCompleteTextBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type data:InsuranceCompany}">
+                    <Border Padding="5">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="{Binding NameSMOK}"
+                                       FontWeight="Bold"
+                                       Margin="0 0 0 3"/>
+                            <TextBlock Text="{Binding Path=AddressF}"
+                                       Foreground="Gray"
+                                       FontFamily="Segoe UI"
+                                       Margin="0 3 0 0"/>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </editors:AutoCompleteTextBox.ItemTemplate>
         </editors:AutoCompleteTextBox>
         <TextBlock Grid.Row="4"
                    Grid.Column="0"
