--- a/PatientInfoModule/Views/Info/InsuranceDocumentCollectionView.xaml
+++ b/PatientInfoModule/Views/Info/InsuranceDocumentCollectionView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PatientInfoModule.Views.IdentityDocumentCollectionView"
+﻿<UserControl x:Class="PatientInfoModule.Views.InsuranceDocumentCollectionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +10,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance viewModels:IdentityDocumentCollectionViewModel}">
+             d:DataContext="{d:DesignInstance viewModels:InsuranceDocumentCollectionViewModel}">
     <UserControl.Resources>
         <converters:Converter x:Key="CountToVisibilityConverter"
                               DefaultValue="{x:Static Visibility.Collapsed}">
@@ -23,30 +23,30 @@
                 Margin="5"
                 Content="Создать новый документ"
                 Padding="5"
-                Command="{Binding AddNewIdentityDocumentCommand, Mode=OneTime}" />
+                Command="{Binding AddNewInsruanceDocumentCommand, Mode=OneTime}" />
         <Grid>
             <ScrollViewer Margin="5"
                           HorizontalAlignment="Stretch"
                           VerticalAlignment="Stretch">
                 <ItemsControl BorderThickness="0"
-                              ItemsSource="{Binding IdentityDocuments}"
+                              ItemsSource="{Binding InsuranceDocuments}"
                               VerticalAlignment="Top">
                     <ItemsControl.ItemTemplate>
-                        <DataTemplate DataType="{x:Type viewModels:IdentityDocumentViewModel}">
-                            <views:IdentityDocumentView />
+                        <DataTemplate DataType="{x:Type viewModels:InsuranceDocumentViewModel}">
+                            <views:InsuranceDocumentView />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </ScrollViewer>
             <TextBlock HorizontalAlignment="Center"
                        VerticalAlignment="Center"
-                       Text="У пациента пока нет ни одного удостоверения личности"
+                       Text="У пациента пока нет ни одного страхового документа"
                        TextWrapping="NoWrap"
                        Foreground="Gray"
                        FontSize="14"
                        FontWeight="SemiBold"
                        TextAlignment="Center"
-                       Visibility="{Binding IdentityDocuments.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
+                       Visibility="{Binding InsuranceDocuments.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
         </Grid>
     </DockPanel>
 </UserControl>
