--- a/PatientInfoModule/Views/Contracts/PatientContractsView.xaml
+++ b/PatientInfoModule/Views/Contracts/PatientContractsView.xaml
@@ -9,7 +9,9 @@
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
              xmlns:views="clr-namespace:PatientInfoModule.Views"
+             xmlns:data="clr-namespace:Core.Data;assembly=Core.Data"
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
+             xmlns:coremisc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:prism="http://www.codeplex.com/prism"
              xmlns:popup="clr-namespace:Core.Wpf.PopupWindowActionAware;assembly=Core.Wpf"
@@ -22,42 +24,23 @@
             <Grid MinWidth="200" MinHeight="100">
                 <TextBlock TextWrapping="Wrap" Grid.Row="0" Text="{Binding}"/>
             </Grid>
-        </DataTemplate>
-        <converters:Converter x:Key="BooleanToCollapsedConverter" DefaultValue="{x:Static Visibility.Collapsed}">
-            <converters:ConverterItem To="{x:Static Visibility.Visible}">
-                <converters:ConverterItem.From>
-                    <system:Boolean>True</system:Boolean>
-                </converters:ConverterItem.From>
-            </converters:ConverterItem>
-            <converters:ConverterItem To="{x:Static Visibility.Collapsed}">
-                <converters:ConverterItem.From>
-                    <system:Boolean>False</system:Boolean>
-                </converters:ConverterItem.From>
-            </converters:ConverterItem>
-        </converters:Converter>
-        <converters:Converter x:Key="BooleanToVisibilityConverter" DefaultValue="{x:Static Visibility.Visible}">
-            <converters:ConverterItem To="{x:Static Visibility.Visible}">
-                <converters:ConverterItem.From>
-                    <system:Boolean>False</system:Boolean>
-                </converters:ConverterItem.From>
-            </converters:ConverterItem>
-            <converters:ConverterItem To="{x:Static Visibility.Collapsed}">
-                <converters:ConverterItem.From>
-                    <system:Boolean>True</system:Boolean>
-                </converters:ConverterItem.From>
-            </converters:ConverterItem>
-        </converters:Converter>
-        
-        <DataTemplate x:Key="PersonAutoCompleteTemplate">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding Path=FullName}" Margin="2" FontWeight="Bold" />
-                <TextBlock Text="{Binding Path=BirthDate, StringFormat=dd-MM-yyyy}" Margin="2"/>
-            </StackPanel>
         </DataTemplate>        
-
+        <converters:Converter x:Key="HidePreview" DefaultValue="{x:Static Visibility.Visible}">
+            <converters:ConverterItem From="{x:Static coremisc:StaticBoolean.True}"
+                                              To="{x:Static Visibility.Visible}" />
+            <converters:ConverterItem From="{x:Static coremisc:StaticBoolean.False}"
+                                              To="{x:Static Visibility.Collapsed}" />  
+        </converters:Converter>
+        <converters:Converter x:Key="ShowPreview" DefaultValue="{x:Static Visibility.Collapsed}">
+             <converters:ConverterItem From="{x:Static coremisc:StaticBoolean.True}"
+                                              To="{x:Static Visibility.Collapsed}" />
+             <converters:ConverterItem From="{x:Static coremisc:StaticBoolean.False}"
+                                              To="{x:Static Visibility.Visible}" />
+        </converters:Converter>
+               
         <DataTemplate x:Key="SectionDataTemplate">
             <DockPanel LastChildFill="True">
-                <Label Content="{Binding SectionName}" HorizontalAlignment="{Binding SectionAlignment}" FontWeight="Medium" Foreground="Green"/>
+                <TextBlock Text="{Binding SectionName}" HorizontalAlignment="{Binding SectionAlignment}" FontWeight="Medium" Foreground="Green"/>
             </DockPanel>
         </DataTemplate>
         <DataTemplate x:Key="ContractItemDataTemplate">
@@ -170,12 +153,12 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" DockPanel.Dock="Top" Visibility="{Binding IsContractSelected, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" DockPanel.Dock="Top" Visibility="{Binding IsActive, Converter={StaticResource ShowPreview}}">
                         <Image Source="pack://application:,,,/Core;Component/Resources/Images/Contract256x256.png" 
                             Height="256" Width="256" Margin="0,200,0,10" HorizontalAlignment="Center" />
                         <TextBlock Text="Договор не выбран" HorizontalAlignment="Center" FontSize="15" FontWeight="Medium"/>
                     </StackPanel>
-                    <Grid Grid.Row="1" Grid.Column="0" Visibility="{Binding IsContractSelected, Converter={StaticResource BooleanToCollapsedConverter}}">
+                    <Grid Grid.Row="1" Grid.Column="0" Visibility="{Binding IsActive, Converter={StaticResource HidePreview}}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
@@ -199,9 +182,9 @@
                         Text="{Binding ContractName, Mode=TwoWay}" FontWeight="Bold" Margin="2"/>
                         <TextBlock Grid.Row="1" Grid.Column="0" Text="Период действия" Margin="2"/>
                         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
-                            <DatePicker SelectedDate="{Binding ContractBeginDateTime, Mode=TwoWay}" Width="115" Margin="2"/>
+                            <DatePicker SelectedDate="{Binding ContractBeginDateTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="115" Margin="2"/>
                             <TextBlock VerticalAlignment="Center" Text=" - " Width="10"/>
-                            <DatePicker SelectedDate="{Binding ContractEndDateTime, Mode=TwoWay}" Width="115" Margin="2"/>
+                            <DatePicker SelectedDate="{Binding ContractEndDateTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="115" Margin="2"/>
                         </StackPanel>
                         <TextBlock Grid.Row="2" Grid.Column="0" Text="Источник финансирования" Margin="2"/>
                         <ComboBox Grid.Row="2" Grid.Column="1" Margin="2" HorizontalAlignment="Stretch"
@@ -209,31 +192,43 @@
                             DisplayMemberPath="Field" 
                             SelectedValuePath="Value" 
                             SelectedValue="{Binding SelectedFinancingSourceId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                                                    Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
+                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
                         <TextBlock Grid.Row="3" Grid.Column="0" Text="Ответственный за договор" Margin="2"/>
                         <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2"
                             ItemsSource="{Binding Registrators}" 
                             DisplayMemberPath="Field" 
                             SelectedValuePath="Value" 
                             SelectedValue="{Binding SelectedRegistratorId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                                                    Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
+                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
 
                         <TextBlock Grid.Row="4" Grid.Column="0" Text="Заказчик" Margin="2"/>
-                        <wpf:AutoCompleteTextBox Grid.Row="4" Grid.Column="1" Margin="2" HorizontalAlignment="Stretch" Height="23"
-                                Watermark="Введите Ф.И.О. заказчика для поиска..."
-                                DisplayMember="FullName"
-                                ItemTemplate="{StaticResource PersonAutoCompleteTemplate}"
-                                SelectedItem="{Binding SelectedClient, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                                                 Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"
-                                IconPlacement="Left"
-                                IconVisibility="Visible"
-                                Provider="{Binding PersonSuggestionProvider}"
-                                x:Name="searchClient">
+                        <wpf:AutoCompleteTextBox 
+                            Grid.Row="4" Grid.Column="1" Margin="2" 
+                            HorizontalAlignment="Stretch" Height="23" Background="White"
+                            Watermark="Введите Ф.И.О. заказчика для поиска..."
+                            Provider="{Binding PersonSuggestionProvider}"
+                            SelectedItem="{Binding SelectedClient, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"
+                            DisplayMember="FullName"
+                            IconPlacement="Left"
+                            IconVisibility="Visible"
+                            x:Name="searchClient">
                             <wpf:AutoCompleteTextBox.LoadingContent>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Загрузка данных..." Margin="2" FontSize="13" />
                                 </StackPanel>
                             </wpf:AutoCompleteTextBox.LoadingContent>
+                            <wpf:AutoCompleteTextBox.ItemTemplate>
+                                <DataTemplate DataType="{x:Type data:Person}">
+                                    <Border Padding="5">
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding Path=FullName}" FontWeight="Bold" Margin="0 0 5 3" />
+                                            <TextBlock Text="{Binding Path=BirthDate, StringFormat=dd-MM-yyyy}" 
+                                                       Foreground="Gray" FontFamily="Segoe UI" Margin="0 0 0 3"/>                                        
+                                        </StackPanel>
+                                    </Border>
+                                </DataTemplate>
+                            </wpf:AutoCompleteTextBox.ItemTemplate>
                         </wpf:AutoCompleteTextBox>
 
                         <TextBlock Grid.Row="5" Grid.Column="0" Text="Потребитель" Margin="2"/>
@@ -245,7 +240,7 @@
                             DisplayMemberPath="Field" 
                             SelectedValuePath="Value" 
                             SelectedValue="{Binding SelectedPaymentTypeId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                                                    Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
+                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
                         <TextBlock Grid.Row="7" Grid.Column="0" Text="№ транзакции" Margin="2" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
                         <TextBox Grid.Row="7" Grid.Column="1" Width="300" Height="23" HorizontalAlignment="Left" Margin="2" 
                             Text="{Binding TransationNumber, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
@@ -267,8 +262,8 @@
                         </Border>
 
                         <ListView Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="2" Margin="3,0,3,2" MinHeight="100" BorderThickness="1,0,1,1" BorderBrush="Black"
-                        ItemsSource="{Binding ContractItems, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                        SelectedItem="{Binding SelectedContractItem, Mode=TwoWay}"
+                        ItemsSource="{Binding ContractItems, ValidatesOnDataErrors=True}"
+                        SelectedItem="{Binding SelectedContractItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"  
                         ItemTemplateSelector="{StaticResource itemTemplateSelector}">
                             <ListView.ItemContainerStyle>
