--- a/PatientInfoModule/Views/Documents/SelectPersonDocumentTypeView.xaml
+++ b/PatientInfoModule/Views/Documents/SelectPersonDocumentTypeView.xaml
@@ -7,8 +7,13 @@
              mc:Ignorable="d" 
              Height="Auto" Width="Auto" MinWidth="500"
              d:DataContext="{d:DesignInstance viewModels:SelectPersonDocumentTypeViewModel}">
-    <UserControl.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    <UserControl.Resources>        
+        <ResourceDictionary>
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
+            </ResourceDictionary.MergedDictionaries>            
+        </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -24,14 +29,18 @@
 
         <Label Grid.Row="0" Grid.Column="0" Content="Тип документа"></Label>
         <ComboBox Grid.Row="0" Grid.Column="1" ItemsSource="{Binding DocumentTypes, Mode=TwoWay}" HorizontalAlignment="Stretch"
-                                SelectedItem="{Binding SelectedDocumentType}" DisplayMemberPath="Name" Margin="5"/>
+                  SelectedItem="{Binding SelectedDocumentType, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
+                  DisplayMemberPath="Name" 
+                  Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"
+                  Margin="5"/>
 
         <TextBlock Grid.Row="1" Grid.Column="0" Text="Дата документа" Margin="5"
                                    Visibility="{Binding DocumentHasDate, Converter={StaticResource BooleanToVisibilityConverter}}"/>
         <DatePicker Grid.Row="1" Grid.Column="1" Margin="5" HorizontalAlignment="Left"
-                                    SelectedDateFormat="Long" 
-                                    SelectedDate="{Binding SelectedDocumentDate, UpdateSourceTrigger=PropertyChanged}"
-                                    Visibility="{Binding DocumentHasDate, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                    SelectedDateFormat="Long" 
+                    SelectedDate="{Binding SelectedDocumentDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                    Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"
+                    Visibility="{Binding DocumentHasDate, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Комментарии" Margin="5"/>
         <TextBox Grid.Row="2" Grid.Column="1" Margin="5" Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" 
