--- a/PatientRecordsModule/Views/VisitEditorView.xaml
+++ b/PatientRecordsModule/Views/VisitEditorView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels"
+             xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              d:DataContext="{d:DesignInstance viewModels:VisitEditorViewModel}">
@@ -33,7 +34,7 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" Grid.Column="0" Text="Дата/время начала случая:"/>
-            <DatePicker Grid.Row="0" Grid.Column="1" SelectedDate="{Binding Date}" SelectedDateFormat="Long" FirstDayOfWeek="Monday" HorizontalAlignment="Left"/>
+            <extToolkit:DateTimePicker Grid.Row="0" Grid.Column="1" Margin="3,1,1,1" HorizontalAlignment="Left" Width="165" Value="{Binding Date}" Format="Custom" FormatString="dd MMMM yyyy HH:mm"/>
 
             <TextBlock Grid.Row="1" Grid.Column="0" Text="Шаблон случая:"/>
             <ComboBox Grid.Row="1" Grid.Column="1"  Margin="3,1,20,1" ItemsSource="{Binding VisitTemplates}" 
@@ -68,7 +69,7 @@
                       Validation.ErrorTemplate="{StaticResource ValidationTemplate}" SelectedValuePath="Id" DisplayMemberPath="Name"/>
 
             <TextBlock Grid.Row="7" Grid.Column="0" Text="Примечание:"/>
-            <TextBox Grid.Row="7" Grid.Column="1" Height="48" Text="{Binding Note}" TextWrapping="Wrap"/>
+            <TextBox Grid.Row="7" Grid.Column="1" Height="48" Text="{Binding Note, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap"/>
 
             <StackPanel Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Content="Сохранить" Margin="3" Command="{Binding CreateVisitCommand}"/>
