Added full ChangeTracker in VisitClose and VisitEditor
First try to add protocolEditor

--- a/PatientRecordsModule/Themes/Generic.xaml
+++ b/PatientRecordsModule/Themes/Generic.xaml
@@ -4,5 +4,7 @@
         <ResourceDictionary Source="../Views/PersonHierarchicalAssignmentsView.xaml" />
         <ResourceDictionary Source="../Views/PersonHierarchicalRecordsView.xaml" />
         <ResourceDictionary Source="../Views/PersonHierarchicalVisitsView.xaml" />
+
+        <ResourceDictionary Source="../Views/RecordTypesProtocolViews/DefaultProtocolView.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
